--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
 requests==2.26.0
 pytest==7.1.1
-django==3.2.0
-numpy==1.19.5
-blinker==1.9.0
-certifi==2025.1.31
+click==8.1.8
+Flask==3.1.0
 idna==3.10
